--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "mongoose": "^7.2.0",
     "nodemailer": "^6.9.3",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "twilio": "^4.11.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
